--- a/user/src/main/resources/templete/login.html
+++ b/user/src/main/resources/templete/login.html
@@ -9,7 +9,7 @@
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required>
     <br>
-    <label for="password">Password:</label>
+    <label for="password">Password111:</label>
     <input type="password" id="password" name="password" required>
     <br>
     <button type="submit">Login</button>
